# coffee-mcp-server

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: brand-onboard.md
.claude/skills/brand-onboard/: SKILL.md
.github/workflows/: claude-code-review.yml  claude.yml
brands/coffee_company/: brand.yaml
docs/: ARCHITECTURE.md  BRAND_INTEGRATION_GUIDE.md  DEPLOY_DECISION.md  index.html
evals/: tool_description_hash.txt
scripts/: hash_tool_descriptions.py
src/coffee_mcp/: brand_config.py  cli.py  formatters.py  mock_data.py  server.py  toc_mock_data.py  toc_server.py  utils.py
src/coffee_mcp/auth/: __init__.py  audit.py  http_app.py  jwt_validator.py  mock_as.py  oauth_routes.py  rate_limit.py  scopes.py  session_store.py
src/starbucks_mcp/: cli.py  formatters.py  mock_data.py  server.py
tests/: test_mcp_real.py  test_oauth_flow.py  test_toc_mcp.py
