[project]
name = "coffee-company-mcp"
version = "0.1.0"
description = "Coffee Company B2B Open Platform MCP Adapter"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.9.0",
    "httpx>=0.28.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.scripts]
coffee-company-mcp = "coffee_mcp.server:main"
coffee = "coffee_mcp.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coffee_mcp"]
